// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Form/Select Date Select 1`] = `
Array [
  " ",
  <div
    style={
      Object {
        "--background": "2, 40, 60",
        "--highlight": "255,  202,  16",
        "--opacity-1": 0.1,
        "--opacity-7": 0.7,
        "--primary": "206, 180, 249",
        "--secondary": "189, 231, 255",
        "--tertiary": "176, 239, 165",
        "--text": "245, 245, 245",
        "0.1": "--opacity-1",
        "0.7": "--opacity-7",
      }
    }
  >
     
    <select
      className="input_select"
      defaultValue="friday"
      id="date"
      name="date"
      onChange={[Function]}
    >
      <option
        value="friday"
      >
        Friday
      </option>
      <option
        value="saturday"
      >
        Saturday
      </option>
      <option
        value="sunday"
      >
        Sunday
      </option>
      <option
        value="monday"
      >
        Monday
      </option>
      <option
        value="tuesday"
      >
        Tuesday
      </option>
      <option
        value="wednesday"
      >
        Wednesday
      </option>
      <option
        value="thursday"
      >
        Thursday
      </option>
    </select>
     
  </div>,
  " ",
]
`;

exports[`Storyshots Form/Select Priority Select 1`] = `
Array [
  " ",
  <div
    style={
      Object {
        "--background": "2, 40, 60",
        "--highlight": "255,  202,  16",
        "--opacity-1": 0.1,
        "--opacity-7": 0.7,
        "--primary": "206, 180, 249",
        "--secondary": "189, 231, 255",
        "--tertiary": "176, 239, 165",
        "--text": "245, 245, 245",
        "0.1": "--opacity-1",
        "0.7": "--opacity-7",
      }
    }
  >
     
    <select
      className="input_select"
      defaultValue="medium"
      id="priority"
      name="priority"
      onChange={[Function]}
    >
      <option
        value="low"
      >
        Low
      </option>
      <option
        value="medium"
      >
        Medium
      </option>
      <option
        value="high"
      >
        High
      </option>
    </select>
     
  </div>,
  " ",
]
`;
